--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,33 +2,14 @@ pipeline {
     agent any
 
     environment {
-        AWS_REGION = 'us-east-1'
-        TF_VERSION = '1.6.0'
-    }
-
-    tools {
-        terraform "${TF_VERSION}"
-    }
-
+AWS_CREDENTIALS_ID = credentials'4a1d39f2-dfe2-4307-9b62-99f9b508e6a5'
+}
     stages {
         stage('Checkout Terraform Code') {
             steps {
                 git branch: 'main',
                    
                     url: 'https://github.com/AshikkaMJ/jenkinspractice.git'
-            }
-        }
-
-        stage('Setup AWS Credentials') {
-            steps {
-                withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: '4a1d39f2-dfe2-4307-9b62-99f9b508e6a5']]) {
-                    sh '''
-                        export AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
-                        export AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
-                        export AWS_DEFAULT_REGION=${AWS_REGION}
-                        echo "AWS Credentials Set"
-                    '''
-                }
             }
         }
 
